# typenx-addon-season-centralizer

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: centralization.rs  main.rs  models.rs  server.rs  source_client.rs  tvmaze.rs
src/typenx_addon_season_centralizer/: __init__.py  __main__.py  addon.py
tests/: test_centralizer.py
