[package]
name = "typenx-addon-season-centralizer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Typenx addon that centralizes split anime seasons from other metadata addons."

[dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
