[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typenx-addon-season-centralizer"
version = "0.1.0"
description = "Typenx addon that centralizes split anime seasons from other metadata addons."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Typenx" }]
dependencies = ["typenx-addon-python-sdk"]

[project.scripts]
typenx-addon-season-centralizer = "typenx_addon_season_centralizer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/typenx_addon_season_centralizer"]
